Revert "Sync with upstream"